feat(baseline): establish Java 21 minimum baseline and Java 25 primary runtime
- Enforce Java 21 bytecode release 65 across all production modules
- Model AST/IR as sealed interface hierarchies with record patterns
- Target Java 21 ClassFileWriter bytecode emitter with -Xverify:all verification
- Harden ThreadLocal compiling context cleanup across all lifecycle edge cases
- Verify virtual-thread zero pinning during steady-state rendering