@@ -189,7 +189,7 @@ public final class TemplateCompileCache {
     Objects.requireNonNull(key, "key must not be null");
     CompiledTemplateHandle handle = entries.get(key);
     if (handle != null) {
-      int stripe = (int) (Thread.currentThread().getId() & RECENCY_STRIPE_MASK);
+      int stripe = (int) (Thread.currentThread().threadId() & RECENCY_STRIPE_MASK);
       boolean shouldDrain = recencyStripes[stripe].record(key);
       if (shouldDrain) {
         tryDrainMaintenance();
